fix: update incorrect portal assets path email templates (#99)

--- a/src/mailing/Mailing.Template/EmailTemplates/appactivation_offer_release_approval.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/appactivation_offer_release_approval.html
@@ -118,7 +118,7 @@
             style="
               display: block;
               min-height: 139px;
-              background: url('https://portal.cofinity-x.com/assets/images/email-templates/header.png');
+              background: url('https://myportal.cofinity-x.com/assets/images-cfx/email-templates/header.png');
               text-align: left;
               box-shadow: 0px 4px 12px #0000001f;
               border-radius: 12px 12px 0 0;
@@ -133,7 +133,7 @@
               style="display: inline-block; margin-top: 55px; margin-left: 43px"
             >
               <img
-                src="https://portal.cofinity-x.com/assets/images/email-templates/Cofinity-X-logo-white.png"
+                src="https://myportal.cofinity-x.com/assets/images-cfx/email-templates/Cofinity-X-logo-white.png"
                 alt="Cofinity-X"
               />
             </span>
