--- a/src/mailing/Mailing.Template/EmailTemplates/nextsteps.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/nextsteps.html
@@ -116,7 +116,7 @@
           <th class="header-bg-img" colspan="5" style="
            display: block;
            min-height: 139px;
-           background: url('https://portal.cofinity-x.com/assets/images/email-templates/header.png');
+           background: url('https://myportal.cofinity-x.com/assets/images-cfx/email-templates/header.png');
            text-align: left;
            box-shadow: 0px 4px 12px #0000001f;
            border-radius: 12px 12px 0 0;
@@ -126,7 +126,7 @@
            background-repeat: no-repeat;
          ">
             <span class="cofinity-title" style="display: inline-block;margin-top: 55px;margin-left: 43px;">
-              <img src="https://portal.cofinity-x.com/assets/images/email-templates/Cofinity-X-logo-white.png"
+              <img src="https://myportal.cofinity-x.com/assets/images-cfx/email-templates/Cofinity-X-logo-white.png"
                 alt="Cofinity-X" />
             </span>
           </th>
@@ -290,7 +290,7 @@
                   display: block;
                   min-height: 139px;
                   background: #f8f8f8
-                    url('https://portal.cofinity-x.com/assets/images/email-templates/footer.png');
+                    url('https://myportal.cofinity-x.com/assets/images-cfx/email-templates/footer.png');
                   background-size: contain;
                   background-repeat: no-repeat;
                   background-position: top right;
