--- a/src/mailing/Mailing.Template/EmailTemplates/osp_welcome_email.html
+++ b/src/mailing/Mailing.Template/EmailTemplates/osp_welcome_email.html
@@ -27,7 +27,7 @@
     <meta content="telephone=no" name="format-detection" />
     <title>OSP Welcome Email</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://portal.test.cofinity-x.com/assets/fonts/karbon/stylesheet.css" rel="stylesheet" />
+    <link href="https://myportal.cofinity-x.com/assets/cfx-fonts/karbon/stylesheet.css" rel="stylesheet" />
 
     <!--[if (mso 16)]> <![endif]-->
     <style type="text/css">
@@ -214,7 +214,7 @@
                     <th class="header-bg-img" colspan="5" style="
                      display: block;
                      min-height: 139px;
-                     background: url('https://portal.cofinity-x.com/assets/images/email-templates/header.png');
+                     background: url('https://myportal.cofinity-x.com/assets/images-cfx/email-templates/header.png');
                      text-align: left;
                      box-shadow: 0px 4px 12px #0000001f;
                      border-radius: 12px 12px 0 0;
@@ -224,7 +224,7 @@
                      background-repeat: no-repeat;
                    ">
                       <span class="cofinity-title" style="display: inline-block;margin-top: 55px;margin-left: 43px;">
-                        <img src="https://portal.cofinity-x.com/assets/images/email-templates/Cofinity-X-logo-white.png"
+                        <img src="https://myportal.cofinity-x.com/assets/images-cfx/email-templates/Cofinity-X-logo-white.png"
                           alt="Cofinity-X" />
                       </span>
                     </th>
@@ -494,7 +494,7 @@
                   display: block;
                   min-height: 139px;
                   background: #f8f8f8
-                    url('https://portal.cofinity-x.com/assets/images/email-templates/footer.png');
+                    url('https://myportal.cofinity-x.com/assets/images-cfx/email-templates/footer.png');
                   background-size: contain;
                   background-repeat: no-repeat;
                   background-position: top right;
